--- a/Client/Car-Rental-System/src/app/client-registration/client-registration.component.scss
+++ b/Client/Car-Rental-System/src/app/client-registration/client-registration.component.scss
@@ -69,7 +69,7 @@
         margin-top: 20px;
       }
 
-      textarea{
+      .login{
         width: 100%;
         border-radius: 13px;
         height: 35px;
