--- a/Client/Car-Rental-System/src/app/login-page/login-page.component.scss
+++ b/Client/Car-Rental-System/src/app/login-page/login-page.component.scss
@@ -1,14 +1,13 @@
 .container{
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
+  padding-top: 60px;
 
   .login-container{
     background: var(--beige);
     border-radius: 50px;
-    margin-top: 100px;
+    margin-top: 80px;
     height: 60%;
     width: 50%;
     min-width: 500px;
@@ -17,8 +16,7 @@
       display: flex;
       flex-direction: column;
 
-      textarea{
-        padding-top: 15px;
+      .email{
         padding-left: 15px;
         color: black;
         border-radius: 50px;
@@ -32,9 +30,9 @@
       .password{
         position: relative;
         .senha{
+          color: black;
           padding-top: 2px;
           padding-left: 15px;
-          color: black;
           border-radius: 50px;
           margin-top: 50px;
           margin-left: 35px;
@@ -44,13 +42,12 @@
         }
         .eye-button{
           position: absolute;
-          right: 90px;
+          right: 70px;
           top: 70px;
           background: transparent;
           border: none;
 
         }
-
         .eye{
           border: 0;
           min-height: 30px;
@@ -83,8 +80,9 @@
           background: transparent;
           border: none;
           font-size: 20px;
-          margin-top: 30px;
-          margin-right: 15px;
+          margin-top: 2%;
+          margin-right: 10%;
+          margin-bottom: 2%;
         }
     }
     }
